--- a/Notess.tex
+++ b/Notess.tex
@@ -1,27 +1,35 @@
-Last login: Thu May 10 09:04:27 on console
-dhcp-v001-111:~ jessecampbell$ ll
--bash: ll: command not found
-dhcp-v001-111:~ jessecampbell$ ls
-AndroidStudioProjects	Documents		Music
-Applications		Downloads		Pictures
-Assignment2Task1.asm	IdeaProjects		Public
-Assignment2Task2.asm	Library
-Desktop			Movies
-dhcp-v001-111:~ jessecampbell$ cd Documents/
-dhcp-v001-111:Documents jessecampbell$ vi Notes.tex
+Senior Design Advisor Help
 
+“Our group has an idea for Senior Design that we were hoping to find an advisor for. If I recall correctly, you mentioned during the mandatory advising session we may want to send you a rough draft of our idea to make there wasn’t anything you could find that would immediately disqualify the concept and/or to find anywhere in the idea that we need to flesh out before sending this to potential advisors.
 
+Essentially our project has 3 main parts:
 
+1. To create an indoor positioning system using the Return Time of Flight localization technique in order to create a 3D map of relevant devices via an anchored, central hub.
+2. To create a ‘wand’ who’s position and orientation is tracked by sensors on each end that the central hub will use to generate a vector extending forward in simulated space to whatever IoT device is being pointed at, and send a signal to turn on (and later more complexly interface with) that IoT device.
+3. To create a phone app and phone case that will serve as both the ‘wand’ and a very intuitive and fast interfacing device for smart homes. (??)
 
+Currently in smart homes, users must fumble through an ever increasing number of menus in order to interface with more and more devices. By taking the user’s orientation into account, we can quickly determine exactly which device a local user is attempting to interact with, and immediately generate the appropriate interface, making interfacing with these devices a much more smooth process.”
 
+Potential Professors (sorted by interests)
 
+IoT:
+Mohammad Al Faruque, Ph.D.
+Brian Demsky, Ph.D.
 
+Wireless Sensing Systems:
+Pai Chou, Ph.D.
 
+Physical Modeling:
+Glenn Healey, Ph.D.
 
+Estimation and Detection/Geo-positioning
+A. Lee Swindlehurst, Ph.D.
 
+Other:
+Rainer Doemer, Ph.D.
+Pooria Yaghini (no page?)
 
-
-
+Senior Design Sphere Math
 http://mathworld.wolfram.com/Sphere-SphereIntersection.html
 http://mathworld.wolfram.com/Circle-CircleIntersection.html
 
@@ -37,6 +45,4 @@ Advanced Algorithms
 2. https://www.researchgate.net/profile/Rekha_Yadav4/publication/309589454_Localization_in_WSN_Using_Modified_Trilateration_Based_on_Fuzzy_Optimization/links/59db1c39458515a5bc2d6b5a/Localization-in-WSN-Using-Modified-Trilateration-Based-on-Fuzzy-Optimization.pdf
 3. https://www.tandfonline.com/doi/full/10.1080/03772063.2014.890826?needAccess=true
 4. http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.637.6047&rep=rep1&type=pdf
-
-Research on operating system: 04/2018-07/20181
 -- INSERT --
