--- a/goals.tex
+++ b/goals.tex
@@ -4,11 +4,8 @@ We propose a system for determining the location of various IoT devices and bein
 Essentially our project has 3 main parts:
 
 1. To create an indoor positioning system using the Return Time of Flight localization technique in order to create a 3D map of relevant devices via an anchored, central hub.
-2. To create a ‘remote’ who’s position and orientation is tracked by sensors in (1) that the central hub will use to generate a vector extending forward in simulated space to whatever IoT device is being pointed at, and send a signal to turn on (and later more complexly interface with) that IoT device.
-3. To create a phone app and phone case that will serve as both the ‘wand’ and a very intuitive and fast interfacing device for smart homes or industry applications.
-
-Currently in smart homes, users must fumble through an ever increasing number of menus in order to interface with more and more devices. By taking the user’s orientation into account, we can quickly determine exactly which device a local user is attempting to interact with, and immediately generate the appropriate interface, making interfacing with these devices a much more smooth process.”
-
+2. To create a temporary piece of hardware whose position and orientation is tracked by the central hub in order to generate a vector in simulated 3D space in order to interface with the device being pointed at by this hardware.
+3. To create a mobile interface that will serve as the 'remote' in order to access a wide variety of IoT devices.
 
 \subsection{Stage 0}
 Early Deadline: End of this next week \\
